--- a/package.json
+++ b/package.json
@@ -8,26 +8,43 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "postinstall": "pinst --disable",
+    "_postinstall": "pinst --disable",
     "prepublishOnly": "pinst --enable",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@next/font": "^14.2.15",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "calender": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.8",
+    "jose": "^5.9.4",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "next-auth": "^4.24.8",
-    "react": "^18",
-    "react-dom": "^18",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.1.4",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
