--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "@next/font": "^14.2.15",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "calender": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.8",
     "jose": "^5.9.4",
@@ -37,7 +40,7 @@
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-day-picker": "^9.1.4",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
