--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.8",
     "jose": "^5.9.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
@@ -50,6 +51,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
